# todree2

./: .envrc
be/: .env  .gcloudignore  .gitignore  Dockerfile  Makefile  README.md  cloudbuild.yaml  litestream.yml  pyproject.toml  run.sh
be/alembic/: env.py
be/alembic/versions/: 6b01e2eabb91_add_open_column_to_items.py  768abb2e997c_rename_position_to_weight_in_items.py  c86201a312ca_create_items_table.py  d97da8b371b9_add_position_column_on_items.py
be/todree/: .env  __main__.py  db.py  schemas.py  server.py
be/todree/db/: __init__.py  commands.py  core.py  crud.py  models.py  seed.json
fe/: README.md  index.html  openapi.json  package-lock.json  package.json  vite.cnfig.js  vite.config.ts
fe/src/: App.css  App.tsx  api.ts  apidummy.ts  atoms.ts  hooks.ts  loadable.ts  model.ts  schema.d.ts  types.ts
fe/src/components/: ItemTree.tsx  Items.tsx
fe/src/components/ItemTree/: ItemSubTree.tsx  index.tsx
fe/src/tree/: index.ts  tree.ts
fe/src/useTree/: index.ts
fe/src/useTree/Tree/: impl.ts  index.ts
fe/todree/: package.json
